--- a/app/views/home/chat.erb
+++ b/app/views/home/chat.erb
@@ -1,3 +1,4 @@
+<div class="container well" style="margin:1%;">
 <link rel="stylesheet" href="/static/css/sample-chat.css">
   <div class="init-check"></div>
 
@@ -17,20 +18,12 @@
       </div>
 
       <div class="left-nav-channel-section">
-        <div class="left-nav-channel-title">오픈채팅</div>
-        <div class="left-nav-channel-empty">오픈 채팅을 시작하세요</div>
+        <div class="left-nav-channel-title">여행 채널</div>
+        <div class="left-nav-channel-empty">오픈 채널 목록</div>
         <div id="open_channel_list"></div>
 
         <div class="left-nav-channel-title title-messaging">1:1 채팅</div>
         <div id="messaging_channel_list"></div>
-      </div>
-
-      <div class="left-nav-user">
-        <div class="left-nav-user left-nav-user-icon"></div>
-        <div class="left-nav-user left-nav-login-user">
-          <div class="left-nav-user left-nav-user-title">username</div>
-          <div class="left-nav-user left-nav-user-nickname"></div>
-        </div>
       </div>
 
     </div> 
@@ -42,29 +35,7 @@
       <!-- modal-bg -->
       <div class="right-section__modal-bg"></div>
 
-      <!-- top -->
-      <div class="chat-top">
-        <div class="chat-top__title"></div>
-        <div class="chat-top-button">
-
-          <div class="chat-top__button chat-top__button-invite">초대</div>
-          <div class="modal-guide-user">
-            유저 리스트
-          </div>
-
-          <div class="chat-top__button chat-top__button-member"></div>
-          <div class="modal-guide-member">
-            접속 중인 유저
-          </div>
-
-          <div class="chat-top__button chat-top__button-leave"></div>
-          <div class="modal-guide-leave">
-            나가기
-          </div>
-
-        </div>
-      </div>
-
+     
       <!-- channel empty -->
       <div class="chat-empty">
         <div class="chat-empty chat-empty__tile">채팅을 시작하세요</div>
@@ -150,6 +121,9 @@
   <!-----------------------
         // END modal
   ------------------------>
+</div>
+
+
 
   <script src="/static/lib/SendBird.min.js"></script>
   <script src="/static/js/util.js"></script>
