--- a/app/views/home/search_list.html.erb
+++ b/app/views/home/search_list.html.erb
@@ -49,7 +49,7 @@
                 <h2>완벽한 여행을 책임질 추천 가이드</h2>
                 <h4>뛰어난 가이드들이 여러분을 기다리고 있습니다.</h4>
                 <ul class="guide_grid">
-                    <% @all.each do |p| %>
+                    <% @all_users.each do |p| %>
                         <% if @user_region == p.region %>
                             <li class="item">
                                 <div class="box">
