--- a/app/views/home/search_list.html.erb
+++ b/app/views/home/search_list.html.erb
@@ -23,6 +23,7 @@
         </div>
         </div>
 </header>
+
 <article>
     <section>
         <div class="search_section">
@@ -43,12 +44,26 @@
             </form>
         </div>
     </section>
+    
     <section>
         <div class="service1_section">
             <div class="guide_section">
                 <h2>완벽한 여행을 책임질 추천 가이드</h2>
                 <h4>뛰어난 가이드들이 여러분을 기다리고 있습니다.</h4>
                 <ul class="guide_grid">
+
+                    <% @searched_mentor.recent(6).each do |p| %>
+                        <li class="item">
+                            <div class="box">
+                                <% unless p.user_img_url.nil? %>   
+                                    <img class="img-responsive" alt="a" src="<%= p.user_img_url%>">
+                                <%end%>
+        
+                                <h3>p.username</h3>
+                                <h4>p.region</h4>
+                            </div>
+                        </li>
+
                     <% @all.each do |p| %>
                         <% if @user_region == p.region %>
                             <li class="item">
@@ -60,9 +75,11 @@
                                 </div>
                             </li>
                         <% end %>
+
                     <% end %>
                 </ul>
             </div>
         </div>
     </section>
+    
 </article>
