--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,9 +56,7 @@
     <section>
         <div class="service1_section">
             <div class="mentor_section">
-                <a href="/enroll_mentor">
-                멘토 등록하기
-                </a>
+                <%= link_to image_tag("enroll_mentor") %><div class="enroll_Info"><p>Lorem Ipsum</p><a href="/enroll_mentor">멘토 등록하기</a></div>
             </div>
             <div class="guide_section">
                 <h2>완벽한 여행을 책임질 추천 가이드</h2>
