--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,56 +1,54 @@
-<h2>Sign up</h2>
+<div class="wrapper_login_section">
+  <div class="sign_up">
+    
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {enctype: "multipart/form-data"}) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-  
-  <div class="field">
-  <p><%= f.label :username %><br />
-  <%= f.text_field :username %></p>
-  </div>
-  
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-  
-  <div class="field">
-    <p><%= f.label :phone %><br />
-    <%= f.text_field :phone %></p>
-  </div>
-  
-  <div class="field">
-   <p><%= f.label :gender %><br />
-   <p><%= f.select :gender, options_for_select(["Select One", "Male", "Female"],:disabled => ["Select One"]), :class => 'genForm_dropBox' %>
-   </p>
-  </div>
-  
-  <div class="field">
-    <p><%= f.label :language %><br />
-    <p><%= f.select :language, options_for_select(["Select One", "한국어", "영어","중국어" ,"일본어"],:disabled => ["Select One"]), :class => 'genForm_dropBox' %>
-    </p>
-  </div>
-  
-  <div class="field">
-    <%= f.label :user_img_url %><br>
-    <%= f.file_field :user_img_url, accept: 'image/png,image/gif,image/jpeg' %>
-  </div>
-  
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <h2>회원 가입</h2>
+    
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {enctype: "multipart/form-data"}) do |f| %>
+      <%= devise_error_messages! %>
+    
+      <div class="field">
+        <%= f.email_field :email, autofocus: true, class: "sign_up_input", placeholder: "이메일을 적어주세요."  %>
+      </div>
+      
+      <div class="field">
+      <%= f.text_field :username, class: "sign_up_input", placeholder: "사용할 닉네임을 적어주세요." %>
+      </div>
+      
+      <div class="field">
+        <%= f.password_field :password, autocomplete: "off", class: "sign_up_input", placeholder: "비밀번호를 입력해주세요. (6자 이내)" %> 
+      </div>
+      
+      <div class="field">
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "sign_up_input", placeholder: "비밀번호를 한 번 더 입력해주세요." %>
+      </div>
+      
+      <div class="field">
+        <%= f.text_field :phone, class: "sign_up_input", placeholder: "휴대폰 번호를 입력해주세요." %>
+      </div>
+      
+      <div class="field gender">
+       <p><%= f.label :gender %><br />
+       <p><%= f.select :gender, options_for_select(["Select One", "Male", "Female"],:disabled => ["Select One"]), :class => 'genForm_dropBox' %>
+       </p>
+      </div>
+      
+      <div class="field language">
+        <p><%= f.label :language %><br />
+        <p><%= f.select :language, options_for_select(["Select One", "한국어", "영어","중국어" ,"일본어"],:disabled => ["Select One"]), :class => 'genForm_dropBox' %>
+        </p>
+      </div>
+      
+      <div class="field sign_up_img">
+        <%= f.label :user_img_url %><br>
+        <%= f.file_field :user_img_url, class: "profile_img", accept: 'image/png,image/gif,image/jpeg' %>
+      </div>
+      
+      <div class="actions">
+        <%= f.submit "회원 가입", class: "sign_up_button" %>
+      </div>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+  </div>
+</div>
