--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,6 +61,11 @@
     </div>
 </header>
 <article>
+	  <section>
+        <div>
+        	<a href= "/go">hihi  </a>
+        </div>
+    </section>
     <section>
         <div class="wrapper_search">
             <form method="post" action="/search_list">
