--- a/app/views/home/mentor_apply_form.erb
+++ b/app/views/home/mentor_apply_form.erb
@@ -1,31 +1,52 @@
-<section> 
-    <div class="wrapper_section2 margin_plus2">
-        <h2 class="text_center">Delpoy 멘토플래너 신청하기 </h2>
+<section>
+	<div class="wrapper_section2 margin_plus2">
+		<h2 class="text_center">Delpoy 멘토링 플래너 신청하기 </h2>
 
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <form action="/enroll_process" method="post">
-                  <div class="form-group">
-                    <label for="mentor_area">멘토링 지역</label>
-                    <input type="text" class="form-control enroll_input" name="mentor_area" id="mentor_area" placeholder="나라 혹은 도시">
-                  </div>
-                  <div class="form-group">
-                    <label for="mentor_period">거주 기간</label>
-                    <input type="text" class="form-control enroll_input" name="mentor_period" id="mentor_period" placeholder="ex) 20xx.xx.xx ~ xx.xx">
-                  </div>
-                  <div class="form-group">
-                    <label for="mentor_content">멘토링 내용</label>
-                    <textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
-                  </div>
-                  <div class="form-group">
-                    <label for="exampleInputFile">사진 첨부</label>
-                    <input type="file" id="exampleInputFile">
-                 </div>
-                  <br>
-                  <button type="submit" class="btn btn-default enroll_mentor_button ">멘토로 등록</button>
-                </form>
-            </div>
-        </div>
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<form action="/enroll_process" method="post">
+					<div class="form-group">
+						<label for="mentor_area">멘토링 지역</label>
+						<input type="text" class="form-control enroll_input" name="mentor_area" id="mentor_area" placeholder="나라 혹은 도시">
+					</div>
+					<div class="form-group">
 
-    </div>
+						<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+				
+						<script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>							
+  							
+						<script>
+							$(function() {
+							$("#datepicker1, #datepicker2").datepicker({
+							dateFormat : 'yy-mm-dd'
+							});
+							});
+						</script>
+
+						<p>
+							조회기간:
+							<input type="text" id="datepicker1">
+							~
+							<input type="text" id="datepicker2">
+						</p>
+
+						<label for="mentor_period">거주 기간</label>
+					</div>
+					<div class="form-group">
+						<label for="mentor_content">멘토링 내용</label>
+						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
+					</div>
+					<div class="form-group">
+						<label for="exampleInputFile">사진 첨부</label>
+						<input type="file" id="exampleInputFile">
+					</div>
+					<br>
+					<button type="submit" class="btn btn-default enroll_mentor_button ">
+						멘토로 등록
+					</button>
+				</form>
+			</div>
+		</div>
+
+	</div>
 </section>
