--- a/app/views/home/enroll_mentor.erb
+++ b/app/views/home/enroll_mentor.erb
@@ -32,7 +32,7 @@
                     <nav>
                         <div class="nav">
                             <div class="li menu_service"><a href="/service" class="li_a">서비스</a></div>
-                            <div class="li mene_help"><a href="/doum" class="li_a">도움말</a></div>
+                            <div class="li mene_help"><a href="/help" class="li_a">도움말</a></div>
                             <div class="li menu_user">
                                 <a href="/mypage" class="li_a ">안녕하세요! <%= @user.username %>님</a>
                                 <div class="user_scroll">
