--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,18 +54,13 @@
                 <div class="index_p">
                     <h1>행복하고 완벽한 여행을 위한 선택</h1>
                     <h4>델포이 플래너를 이용해 계획을 세우고, 어려움을 겪는다면 멘토에게 도움을 받으세요.</h4>
-                    <div class="planner_button"><a href="" class="planner_a_button">플래너 만들기</a></div>
+                    <div class="planner_button"><a href="/go" class="planner_a_button">멘토 상담 신청하기 </a></div>
                 </div>
             </div>  
         </div>
     </div>
 </header>
 <article>
-	  <section>
-        <div>
-        	<a href= "/go">hihi  </a>
-        </div>
-    </section>
     <section>
         <div class="wrapper_search">
             <form method="post" action="/search_list">
@@ -182,16 +177,6 @@
         </div>
         
     </section>
-    <section>
-        <div class="wrapper_section3">
-            <div class="comm_section">
-                <h2>언제 어디서나 사람들과 함께하세요</h2>
-                <h4>커뮤니티에서 당신의 여행담을 마음껏 나누고 자랑하세요.</h4>
-                <a href="meeting/index">
-                   <button type="button" class="btn btn-primary btn-lg comm_button">커뮤니티 찾기</button>
-                </a>
-            </div>
-        </div>
-    </section>
+    
 </article>
 
