--- a/app/views/home/mentor_apply_form.erb
+++ b/app/views/home/mentor_apply_form.erb
@@ -1,3 +1,5 @@
+<!-- 멘토링 신청 양식입니다 -->
+
 <section>
 	<div class="wrapper_section2 margin_plus2">
 		<h2 class="text_center">Delpoy 멘토링 플래너 신청하기 </h2>
@@ -37,7 +39,7 @@
 					
 					<br>
 					<button type="submit" class="btn btn-default enroll_mentor_button ">
-						멘토로 등록
+						멘토링 신청하기 
 					</button>
 				</form>
 			</div>
