controller mentoring apply

--- a/app/views/home/mentor_apply_form.erb
+++ b/app/views/home/mentor_apply_form.erb
@@ -1,4 +1,6 @@
-<!-- 멘토링 신청 양식입니다 -->
+<!-- 멘토링 신청 양식입니다  헤더를 날림 -->
+
+<!-- 제 생각 인데, 멘토링 신청 방식을 설명해주는 페이지 후에 신청 란으로 넘어가면 좋을 것 같습니다.  -->
 
 <section>
 	<div class="wrapper_section2 margin_plus2">
@@ -28,12 +30,26 @@
 							<input type="text" id="datepicker1" name="from">
 							~
 							<input type="text" id="datepicker2" name="to">
-						</p>
-
-						
+						</p>	
 					</div>
+						
 					<div class="form-group">
-						<label for="mentor_content">멘토링 내용</label>
+						<label for="mentor_content">여행 인원 </label>
+						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
+					</div>
+					
+					<div class="form-group">
+						<label for="mentor_content"> 예산 범위  </label>
+						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
+					</div>
+					
+					<div class="form-group">
+						<label for="mentor_content"> 여행 테마 (%로 조절)  </label>
+						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
+					</div>
+					
+					<div class="form-group">
+						<label for="mentor_content">멘토에게 하고 싶은 말 </label>
 						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
 					</div>
 					
