--- a/app/views/mentoring/mentoring_apply_form_1.erb
+++ b/app/views/mentoring/mentoring_apply_form_1.erb
@@ -1,86 +1,97 @@
 <!-- 멘토링에 대한 설명이 있는 페이지 1 입니다. -->
 <header>
-    <div class="">
-        <div class="wrapper_header">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="mobile_menu">
-                <%= image_tag("logo2.png", id:'mobile_nav_logo') %>
-                <%= image_tag("x.png", id:'x_logo') %>
-                <div>
-                    <ul>
-                        <li><a href="/mypage">안녕하세요! <%= @user.username %>님</a></li>
-                        <li><a href="/service">서비스</a></li>
-                        <li><a href="/doum">도움말</a></li>
-                        <li><a href="enroll_mentor">멘토 등록하기</a></li>
-                    </ul>            
-                </div>
-            </div>
-            
-            <div class="mobile_header">
-                <%= image_tag("mobile_menu.png" , id: 'mobile_menu_logo') %>
-                <a class="mobile_brand" href="#page-top">
-                    <%= image_tag("logo.png", id:'mobile_logo') %>
-                </a>
-            </div>
+	<div class="">
+		<!--채우라 -->
+		<div class="wrapper_header">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="mobile_menu">
+				<%= image_tag("logo2.png", id:'mobile_nav_logo') %>
+				<%= image_tag("x.png", id:'x_logo') %>
+				<div>
+					<ul>
+						<li>
+							<a href="/mypage">안녕하세요! <%= @user.username %>님</a>
+						</li>
+						<li>
+							<a href="/service">서비스</a>
+						</li>
+						<li>
+							<a href="/doum">도움말</a>
+						</li>
+						<li>
+							<a href="enroll_mentor">멘토 등록하기</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 
-            <div class="basic_header">
-                <div class="logo">
-                    <a href="/">
-                    <%= image_tag("logo.png" , id:'logo')  %>
-                    </a>
-                </div>
-                <div class="menu">
-                    <nav>
-                        <div class="nav">
-                            <div class="li menu_service"><a href="/service" class="li_a">서비스</a></div>
-                            <div class="li menu_help"><a href="/help" class="li_a">도움말</a></div>
-                            <div class="li menu_user">
-                                <a href="/mypage" class="li_a ">안녕하세요! <%= @user.username %>님</a>
-                                <div class="user_scroll">
-                                    <ul>
-                                        <li class="my_page"><a href="/mypage">마이페이지</a></li>
-                                        <li class="log_out"><a href="/users/sign_out">로그아웃</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <% if @user.grade == 1 %>
-                            <div class="li menu_admin"><a href="/admin" class="li_a ">관리자 페이지</a></div>
-                            <% end %>
-                            <div class="li menu_enroll"><a href="enroll_mentor" class="li_a nav_enroll_mentor">멘토 등록하기</a></div>                     
-                        </div>
-                    </nav>
-                </div>     
-            </div>
+			<div class="mobile_header">
+				<%= image_tag("mobile_menu.png" , id: 'mobile_menu_logo') %>
+				<a class="mobile_brand" href="#page-top"> <%= image_tag("logo.png", id:'mobile_logo') %> </a>
+			</div>
+
+			<div class="basic_header">
+				<div class="logo">
+					<a href="/"> <%= image_tag("logo.png" , id:'logo')  %> </a>
+				</div>
+				<div class="menu">
+					<nav>
+						<div class="nav">
+							<div class="li menu_service">
+								<a href="/service" class="li_a">서비스</a>
+							</div>
+							<div class="li menu_help">
+								<a href="/help" class="li_a">도움말</a>
+							</div>
+							<div class="li menu_user">
+								<a href="/mypage" class="li_a ">안녕하세요! <%= @user.username %>님</a>
+								<div class="user_scroll">
+									<ul>
+										<li class="my_page">
+											<a href="/mypage">마이페이지</a>
+										</li>
+										<li class="log_out">
+											<a href="/users/sign_out">로그아웃</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<% if @user.grade == 1 %>
+							<div class="li menu_admin">
+								<a href="/admin" class="li_a ">관리자 페이지</a>
+							</div>
+							<% end %>
+							<div class="li menu_enroll">
+								<a href="enroll_mentor" class="li_a nav_enroll_mentor">멘토 등록하기</a>
+							</div>
+						</div>
+					</nav>
+				</div>
+			</div>
 </header>
-<section> 
-    <div class="wrapper_section2 margin_plus">
-        <div class="planner_section">
-            <%= image_tag("planner.png", id: "img_planner") %>               
-            <div class="service_Info">
-                <h2>일정을 계획하고 정리하세요.</h2>
-                <p>델포이는 당신의 완벽한 여행을 위해 일정을 쉽게 계획하고 정리해주는 플래너를 제공합니다.<br>방문하는 나라, 이용할 교통수단, 숙박, 식당 등 여행에 관한 정보들을 플래너에 직접 기록하면서 설렘과 기대감을 가득 담아보세요. 당신이 기록한 온라인 플래너는 원하실 경우 고급 가죽 재질의 실제 플래너로 제작해드립니다.</p>
-            </div>
-        </div>
-        <div class="partner_section">
-            <%= image_tag("partner.png", id: "img_partner") %>               
-            <div class="service_Info">
-                <h2>현지인 멘토와 함께 풍요롭고 행복한 여행을 구상하세요.</h2>
-                <p>당신이 일정을 짜는데 어려움을 겪고계신다면, 메인 페이지의 검색 기능을 활용하여 당신에게 딱 맞는 현지인 멘토를 찾을 수 있습니다. <br>당신이 소정의 비용을 지불하고 멘토와 연결된 이후부터, 멘토는 온라인 상에서 실시간으로 당신의 계획을 피드백해주고, 더 좋은 장소, 맛집, 히든 플레이스, 교통 등 정확하면서도 질좋은 수많은 정보들을 제공할 것입니다. 뿐만 아니라 여행 중에 어떤 예기치 못한 일이 닥칠 때도 멘토는 당신을 위해 힘쓸 것입니다. </p>
-            </div>
-        </div>
-        <div class="talk_section">
-            <%= image_tag("talk.png", id: "img_talk") %>               
-            <div class="service_Info">
-                <h2>당신의 경험을 타인과 마음껏 나누세요.</h2>
-                <p>델포이는 사용자들의 자유로운 공간을 위해 커뮤니티 서비스를 제공합니다.<br>당신의 여행담을 마음껏 나누고 자랑하세요. 그리고 커뮤니티에 올라온 다른 사용자들의 생생한 경험담을 통해 보다 알찬 여행을 계획하세요. </p>
-            </div>
-        </div>
-        
-        <a>
-            
-        </a>
-    </div>
-    
-    
-    <div class="planner_button"><a href="/mentoring_apply2" class="planner_a_button">멘토 상담 신청하기 </a></div>
+<section>
+
+	<h2 class="text_center"> 1. Delpoy의 멘토링 매칭 시스템 </h2>
+	<div class="wrapper_section2 margin_plus">
+
+		<div class="planner_button">
+			<a href="/mentoring_apply2" class="planner_a_button">멘토 상담 신청하기 </a>
+		</div>
+	</div>
+
+</section>
+
+<section>
+	<div class="wrapper_section2 margin_plus">
+		<p style = "text-align: center ">
+			<span><h2 class="text_center">진행중인 요청</h2> </span>
+		</p>
+	</div>
+</section>
+
+<section>
+	<div class="wrapper_section2 margin_plus">
+
+	</div>
+
 </section>
