--- a/app/views/mentoring/success.erb
+++ b/app/views/mentoring/success.erb
@@ -1,6 +1,4 @@
-<!-- 멘토링 신청 양식입니다  페이지 2 ,   -->
-<!-- logo 만 남기고 시프다 -->
-
+<!--견적서를 보내고나서 대기타는 부분 -->
 <header>
     <div class="img_header">
         <div class="wrapper_header">
@@ -55,66 +53,7 @@
             </div>
 </header>
 
-
-
-<section>
-	<div class="wrapper_section2 margin_plus2">
-		<h2 class="text_center"> 2. 멘토링 신청하기  </h2>
-		
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<form action="/need_mentor1" method="post">
-					<div class="form-group">
-						<label for="mentor_area">멘토링 지역</label>
-						<input type="text" class="form-control enroll_input" name="mentor_area" id="mentor_area" placeholder="나라 혹은 도시">
-					</div>
-					<div class="form-group">
-
-													
-  							
-						<script>
-							$(function() {
-							$("#datepicker1, #datepicker2").datepicker({
-							dateFormat : 'yy-mm-dd'
-							});
-							});
-						</script>
-
-						<p>
-							<label for="mentor_period">여행 기간</label>	
-							<input type="text" id="datepicker1" name="from">
-							~
-							<input type="text" id="datepicker2" name="to">
-						</p>	
-					</div>
-				<!--		
-					<div class="form-group">
-						<label for="mentor_content">여행 인원 </label>
-						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
-					</div>
-					
-					<div class="form-group">
-						<label for="mentor_content"> 예산 범위  </label>
-						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
-					</div>
-					
-					<div class="form-group">
-						<label for="mentor_content"> 여행 테마 (%로 조절)  </label>
-						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
-					</div>
-				-->
-					<div class="form-group">
-						<label for="mentor_content">멘토에게 하고 싶은 말 </label>
-						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
-					</div>
-					
-					<br>
-					<button type="submit" class="btn btn-default enroll_mentor_button ">
-						멘토링 신청하기 
-					</button>
-				</form>
-			</div>
-		</div>
-
-	</div>
-</section>
+<%= @area %>
+<%= @from %>
+<%= @to %>
+<%= @text %>
