--- a/app/views/mentoring/mentoring_apply_form_1.erb
+++ b/app/views/mentoring/mentoring_apply_form_1.erb
@@ -71,7 +71,7 @@
 </header>
 <section>
 
-	<h2 class="text_center"> 1. Delpoy의 멘토링 매칭 시스템 </h2>
+	<h2 class="text_center"> Delpoy의 멘토링 매칭 시스템 </h2>
 	<div class="wrapper_section2 margin_plus">
 
 		<div class="planner_button">
@@ -86,6 +86,9 @@
 		<p style = "text-align: center ">
 			<span><h2 class="text_center">진행중인 요청</h2> </span>
 		</p>
+		
+		<a href="/auction"> 입찰 확인하기  </a>
+		
 	</div>
 </section>
 
