--- a/app/views/mentoring/mentoring_apply_form_1.erb
+++ b/app/views/mentoring/mentoring_apply_form_1.erb
@@ -73,24 +73,18 @@
 
 	<h2 class="text_center"> Delpoy의 멘토링 매칭 시스템 </h2>
 	<div class="wrapper_section2 margin_plus">
-
+		<div><%= image_tag("mentoring_explain.png")  %></div>
 		<div class="planner_button">
 			<a href="/mentoring_apply2" class="planner_a_button">멘토 상담 신청하기 </a>
+		</div>
+		
+		<div class="planner_button">
+			<a href="/auction" class="planner_a_button"> 진행 중인 요청  </a>
 		</div>
 	</div>
 
 </section>
 
-<section>
-	<div class="wrapper_section2 margin_plus">
-		<p style = "text-align: center ">
-			<span><h2 class="text_center">진행중인 요청</h2> </span>
-		</p>
-		
-		<a href="/auction"> 입찰 확인하기  </a>
-		
-	</div>
-</section>
 
 <section>
 	<div class="wrapper_section2 margin_plus">
