--- a/app/views/mentoring/mentoring_apply_form_1.erb
+++ b/app/views/mentoring/mentoring_apply_form_1.erb
@@ -75,7 +75,7 @@
 	<div class="wrapper_section2 margin_plus">
 		<div><%= image_tag("mentoring_explain.png")  %></div>
 		<div class="planner_button">
-			<a href="/mentoring_apply2" class="planner_a_button">멘토 상담 신청하기 </a>
+			<a href="/mentoring_process1" class="planner_a_button">멘토 상담 신청하기 </a>
 		</div>
 		
 		<div class="planner_button">
