--- a/app/views/mentoring/mentoring_auction.erb
+++ b/app/views/mentoring/mentoring_auction.erb
@@ -52,3 +52,16 @@
                 </div>     
             </div>
 </header>
+
+<section>
+	<div class="wrapper_section2 margin_plus2">
+		<h2 class="text_center"> 1-1. 여행 기본 정보 작성하기 </h2>
+
+		<div class="panel panel-default">
+			<div class="panel-body">
+					
+			</div>
+		</div>
+
+	</div>
+</section>
