--- a/app/views/mentoring/success.erb
+++ b/app/views/mentoring/success.erb
@@ -79,13 +79,15 @@
 					<p>멘토들이 견적서를 확인 중 입니다. </p>
 					
 					<p> 요청 항목 요약  </p>
-					<%= @area %>
-					<%= @from %>
-					<%= @to %>
-					<%= @text %>
+					
+					
+					b
+					<%= @b.area %>
+					<%= @b.user_id %>
 				</div>
+				
+				
 			</div>
-
 	</div>
 </section>
 
