--- a/app/views/mentoring/mentoring_apply_form_2.erb
+++ b/app/views/mentoring/mentoring_apply_form_2.erb
@@ -73,7 +73,7 @@
 
 <section>
 	<div class="wrapper_section2 margin_plus2">
-		<h2 class="text_center"> 1-1. 여행 기본 정보 작성하 </h2>
+		<h2 class="text_center"> 1-1. 여행 기본 정보 작성하기 </h2>
 
 		<div class="panel panel-default">
 			<div class="panel-body">
@@ -116,14 +116,8 @@
 
 					<div class="form-group">
 						<label for="mentor_content"> 예산 범위 </label>
-						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
+						<textarea class="form-control" name = "budget"  rows="10"></textarea>
 					</div>
-
-					<div class="form-group">
-						<label for="mentor_content"> 여행 테마 (%로 조절) </label>
-						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
-					</div>
-
 					<div class="form-group">
 						<label for="mentor_content">멘토에게 하고 싶은 말 </label>
 						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
@@ -132,19 +126,8 @@
 					<!--여행 견적 -->
 					<div class="form-group">
 						<label for="mentor_area"> 숙박 유형 (사진 + 호텔, 호스텔 , 민박, 펜션 ,기타 , 섞어서 등등 ) </label>
-						<input type="text" class="form-control enroll_input" name="mentor_area" id="mentor_area" placeholder="나라 혹은 도시">
+						<input type="text" class="form-control enroll_input" name="accomodation" placeholder="나라 혹은 도시">
 					</div>
-					<!-- 예산 범위 -->
-					<div class="form-group">
-						<label for="mentor_area"> 예산 </label>
-						<input type="text" class="form-control enroll_input" name="mentor_area" id="" name ="numOfMem">
-					</div>
-
-					<div class="form-group">
-						<label for="mentor_content">멘토에게 하고 싶은 말 </label>
-						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
-					</div>
-
 					<br>
 
 					<button type="submit" class="btn btn-default enroll_mentor_button ">
