--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
                 <%= image_tag("x.png", id:'x_logo') %>
                 <div>
                     <ul>
-                        <li><a href="/mypage">안녕하세요! <%= @user.username %>님</a></li>
+                        <li><a href="/mypage">안녕하세요! <%= @user.name %>님</a></li>
                         <li><a href="/service">서비스</a></li>
                         <li><a href="/doum">도움말</a></li>
                         <li><a href="enroll_mentor">멘토 등록하기</a></li>
