--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
       </div>
       
       <div class="field">
-      <%= f.text_field :username, class: "sign_up_input", placeholder: "사용할 닉네임을 적어주세요." %>
+      <%= f.text_field :username, class: "sign_up_input", placeholder: "이름을 적어주세요." %>
       </div>
       
       <div class="field">
