--- a/app/views/mentoring/mentoring_apply_form_2.erb
+++ b/app/views/mentoring/mentoring_apply_form_2.erb
@@ -106,12 +106,12 @@
 					<!-- 여행 인원 -->
 					<div class="form-group">
 						<label for="mentor_area"> 여행 인원 (선택 ) </label>
-						<input type="text" class="form-control enroll_input" name="from" id="" name ="numOfMem">
+						<input type="text" class="form-control enroll_input" id="" name ="numOfMem">
 					</div>
 					<!--여행 테마 -->
 					<div class="form-group">
 						<label for="mentor_area"> 여행 테마 ( 사진 + text + checkbox? ) </label>
-						<input type="text" class="form-control enroll_input" name="to" id="" name="themeOfPlan">
+						<input type="text" class="form-control enroll_input" id="" name="themeOfPlan">
 					</div>
 
 					<div class="form-group">
@@ -119,15 +119,15 @@
 						<textarea class="form-control" name = "budget"  rows="10"></textarea>
 					</div>
 					<div class="form-group">
-						<label for="mentor_content">멘토에게 하고 싶은 말 </label>
-						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
-					</div>
-
-					<!--여행 견적 -->
-					<div class="form-group">
 						<label for="mentor_area"> 숙박 유형 (사진 + 호텔, 호스텔 , 민박, 펜션 ,기타 , 섞어서 등등 ) </label>
 						<input type="text" class="form-control enroll_input" name="accomodation" placeholder="나라 혹은 도시">
 					</div>
+					
+					<div class="form-group">
+						<label for="mentor_content">멘토에게 하고 싶은 말 </label>
+						<textarea class="form-control" name = "mentor_content" id="mentor_content" rows="10"></textarea>
+					</div>
+					
 					<br>
 
 					<button type="submit" class="btn btn-default enroll_mentor_button ">
