--- a/app/views/mentoring/success.erb
+++ b/app/views/mentoring/success.erb
@@ -79,7 +79,10 @@
 					<p>멘토들이 견적서를 확인 중 입니다. </p>				
 					
 				</div>
-				
+				<div>
+					<%= @a.mentor_area %>
+					
+				</div>
 				
 			</div>
 	</div>
